--- a/Farmerchess/Farmerchess/App.config
+++ b/Farmerchess/Farmerchess/App.config
@@ -13,5 +13,7 @@
       <add key="GridColour" value="black"/>
       <add key="OColour" value="blue"/>
       <add key="XColour" value="red"/>
+
+      <add key="UseTestGrid" value="1"/> 
     </appSettings>
 </configuration>
