Added GameTree class. Started implementing game loop into Game class.

--- a/Farmerchess/Farmerchess/Farmerchess.csproj
+++ b/Farmerchess/Farmerchess/Farmerchess.csproj
@@ -58,7 +58,10 @@
     </ApplicationDefinition>
     <Compile Include="Game.cs" />
     <Compile Include="BitGrid.cs" />
+    <Compile Include="GameTree.cs" />
     <Compile Include="Gui\GameCanvas.cs" />
+    <Compile Include="Players\IPlayer.cs" />
+    <Compile Include="Players\MiniMaxPlayer.cs" />
     <Compile Include="Tools.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
