Started implementing bitmap images.

--- a/Farmerchess/Farmerchess/App.config
+++ b/Farmerchess/Farmerchess/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
     <appSettings>
+      <!-- Board and block dimensions -->
       <add key="BlockCountX" value="20"/>
       <add key="BlockCountY" value="20"/>
       <add key="BlockSize" value="40"/>
@@ -13,6 +14,9 @@
       <add key="GridColour" value="black"/>
       <add key="OColour" value="blue"/>
       <add key="XColour" value="red"/>
+      <!-- Images -->
+      <add key="XImagePath" value="Images/x.png"/>
+      <add key="OImagePath" value="Images/o.png"/>
 
       <add key="UseTestGrid" value="1"/> 
     </appSettings>
