--- a/Farmerchess/Farmerchess/App.config
+++ b/Farmerchess/Farmerchess/App.config
@@ -5,9 +5,9 @@
     </startup>
     <appSettings>
       <!-- Board and block dimensions -->
-      <add key="BlockCountX" value="20"/>
-      <add key="BlockCountY" value="20"/>
-      <add key="BlockSize" value="40"/>
+      <add key="BlockCountX" value="10"/>
+      <add key="BlockCountY" value="10"/>
+      <add key="BlockSize" value="20"/>
       <add key="LineThickness" value="2"/>
       <!-- Colours -->
       <add key="BgColour" value="white"/>
@@ -15,8 +15,8 @@
       <add key="OColour" value="blue"/>
       <add key="XColour" value="red"/>
       <!-- Images -->
-      <add key="XImagePath" value="Images/x.png"/>
-      <add key="OImagePath" value="Images/o.png"/>
+      <add key="XImagePath" value="x.png"/>
+      <add key="OImagePath" value="o.png"/>
 
       <add key="UseTestGrid" value="0"/> 
     </appSettings>
