Managed to get image loading and display to work! Grid in background is now static, only Xs and Os are changing.

--- a/Farmerchess/Farmerchess/Farmerchess.csproj
+++ b/Farmerchess/Farmerchess/Farmerchess.csproj
@@ -115,12 +115,12 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Resource Include="Images\o.png">
+    <None Include="Images\o.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Images\x.png">
+    </None>
+    <None Include="Images\x.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
