--- a/Farmerchess/Farmerchess/App.config
+++ b/Farmerchess/Farmerchess/App.config
@@ -5,19 +5,18 @@
     </startup>
     <appSettings>
       <!-- Board and block dimensions -->
-      <add key="BlockCountX" value="10"/>
-      <add key="BlockCountY" value="10"/>
-      <add key="BlockSize" value="40"/>
-      <add key="LineThickness" value="2"/>
+      <add key="nbrBlockCountX" value="20"/>
+      <add key="nbrBlockCountY" value="20"/>
+      <add key="nbrBlockSize" value="30"/>
+      <add key="nbrLineThickness" value="1"/>
       <!-- Colours -->
-      <add key="BgColour" value="white"/>
-      <add key="GridColour" value="black"/>
-      <add key="OColour" value="blue"/>
-      <add key="XColour" value="red"/>
+      <add key="BgColour" value="#dddddd"/>
+      <add key="GridColour" value="#666666"/>
       <!-- Images -->
       <add key="XImagePath" value="Images/x.png"/>
       <add key="OImagePath" value="Images/o.png"/>
 
-      <add key="UseTestGrid" value="0"/> 
+      <add key="nbrUseTestGrid" value="0"/>
+      <add key="nbrDebugMode" value="1"/>
     </appSettings>
 </configuration>
