added Move and MoveList classes.

--- a/Farmerchess/Farmerchess/Farmerchess.csproj
+++ b/Farmerchess/Farmerchess/Farmerchess.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Gui\GameCanvas.cs" />
     <Compile Include="Gui\GfxElement.cs" />
     <Compile Include="IPlayerGrid.cs" />
+    <Compile Include="Move.cs" />
+    <Compile Include="MoveList.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Players\Human.cs" />
     <Compile Include="Players\IPlayer.cs" />
